--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
     "react-redux": "^8.0.4",
-    "react-router-dom": "^6.3.0"
+    "react-router-dom": "^6.3.0",
+    "react-transition-group": "^4.4.5"
   },
   "devDependencies": {
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
+    "@types/react-transition-group": "^4.4.5",
     "@vitejs/plugin-react": "^2.1.0",
     "sass": "^1.54.9",
     "typescript": "^4.6.4",
